@@ -72,6 +72,7 @@
     <Compile Include="Interop\Windows\Interop.Windows.EAs.cs" />
     <Compile Include="Interop\Windows\Interop.Windows.types.cs" />
     <Compile Include="Interop\Windows\Interop.Windows.Files.cs" />
+    <Compile Include="Interop\Windows\Interop.Windows.Streams.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
